// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewDashboard renders dashboard 1`] = `
<div>
  <header
    style="height: 48px;"
  />
  <div
    class="container dashboard-scroll-container"
  >
    <div>
      ActionsBar
    </div>
    <div
      class="container dashboard-scroll-container"
    >
      <div>
        TitleBar
      </div>
      <div>
        ItemGrid
      </div>
    </div>
  </div>
  <div
    class="notice"
  >
    <div
      class="jsx-761413583 centered-content top"
      data-test="dhis2-uicore-centeredcontent"
    >
      <div
        class="jsx-761413583 centered-inner-content"
      >
        <div
          class="noticeContainer"
        >
          <div
            class="jsx-3561221191 root warning"
            data-test="dhis2-uicore-noticebox"
          >
            <div
              data-test="dhis2-uicore-noticebox-icon"
            >
              <svg
                class="jsx-884574500 jsx-1769496071"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="jsx-884574500"
                  d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"
                />
              </svg>
            </div>
            <div
              class="jsx-3561221191"
            >
              <div
                class="jsx-3638294246"
                data-test="dhis2-uicore-noticebox-message"
              >
                Creating dashboards on small screens is not supported. Resize your screen to return to create mode.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewDashboard renders print preview 1`] = `
<div>
  <header
    style="height: 48px;"
  />
  <div
    class="container dashboard-scroll-container"
  >
    <div>
      ActionsBar
    </div>
    <div>
      LayoutPrintPreview
    </div>
  </div>
  <div
    class="notice"
  >
    <div
      class="jsx-761413583 centered-content top"
      data-test="dhis2-uicore-centeredcontent"
    >
      <div
        class="jsx-761413583 centered-inner-content"
      >
        <div
          class="noticeContainer"
        >
          <div
            class="jsx-3561221191 root warning"
            data-test="dhis2-uicore-noticebox"
          >
            <div
              data-test="dhis2-uicore-noticebox-icon"
            >
              <svg
                class="jsx-884574500 jsx-1769496071"
                viewBox="0 0 48 48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="jsx-884574500"
                  d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"
                />
              </svg>
            </div>
            <div
              class="jsx-3561221191"
            >
              <div
                class="jsx-3638294246"
                data-test="dhis2-uicore-noticebox-message"
              >
                Creating dashboards on small screens is not supported. Resize your screen to return to create mode.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
